--- a/Ensino Médio/humanas.html
+++ b/Ensino Médio/humanas.html
@@ -14,7 +14,6 @@
         <a href="/index.html">Início</a>
         <a id="cursoTecnico" onclick="ModalTec()">Curso técnico</a>
         <a id="ensinoMedio" onclick="ModalEM()">Ensino Médio</a>
-        <a href="/Cerificados/certicados.html">Certificados</a>
     </header>
 
     <h1 class="tituloPagina">Humanas</h1>
@@ -144,9 +143,9 @@
     </div>
 
     <div class="modalTec">
-        <a href="/Ensino Médio/desenvolvimento.html">Desenvolvimento de Sistemas</a>
-        <a href="/Ensino Médio/modelagem.html">Modelagem de Sistemas</a>
-        <a href="/Ensino Médio/bancoDados.html">Banco de Dados</a>
+        <a href="/Curso Técnico/desenvolvimento.html">Desenvolvimento de Sistemas</a>
+        <a href="/Curso Técnico/modelagem.html">Modelagem de Sistemas</a>
+        <a href="/Curso Técnico/bancoDados.html">Banco de Dados</a>
     </div>
 </body>
 
