--- a/Ensino Médio/matematica.html
+++ b/Ensino Médio/matematica.html
@@ -14,7 +14,6 @@
         <a href="/index.html">Início</a>
         <a id="cursoTecnico" onclick="ModalTec()">Curso técnico</a>
         <a id="ensinoMedio" onclick="ModalEM()">Ensino Médio</a>
-        <a href="/Cerificados/certicados.html">Certificados</a>
     </header>
 
     <h1 class="tituloPagina">Matemática</h1>
@@ -93,7 +92,6 @@
                 <p>Meu desempenho no primeiro Avalia Sesi de matemática, onde consegui alcançar um bom resultado</p>
             </div>
         </div>
-
     </div>
 
     <div class="trimestre3" id="trimestre3" style="display: none;">
@@ -120,9 +118,9 @@
     </div>
 
     <div class="modalTec">
-        <a href="/Ensino Médio/desenvolvimento.html">Desenvolvimento de Sistemas</a>
-        <a href="/Ensino Médio/modelagem.html">Modelagem de Sistemas</a>
-        <a href="/Ensino Médio/bancoDados.html">Banco de Dados</a>
+        <a href="/Curso Técnico/desenvolvimento.html">Desenvolvimento de Sistemas</a>
+        <a href="/Curso Técnico/modelagem.html">Modelagem de Sistemas</a>
+        <a href="/Curso Técnico/bancoDados.html">Banco de Dados</a>
     </div>
 </body>
 
