--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header>
         <a id="cursoTecnico" onclick="ModalTec()">Curso técnico</a>
         <a id="ensinoMedio" onclick="ModalEM()">Ensino Médio</a>
-        <a href="/Cerificados/certicados.html">Certificados</a>
     </header>
 
     <!-- Sobre mim -->
@@ -95,9 +94,9 @@
     </div>
 
     <div class="modalTec">
-        <a href="/Ensino Médio/desenvolvimento.html">Desenvolvimento de Sistemas</a>
-        <a href="/Ensino Médio/modelagem.html">Modelagem de Sistemas</a>
-        <a href="/Ensino Médio/bancoDados.html">Banco de Dados</a>
+        <a href="/Curso Técnico/desenvolvimento.html">Desenvolvimento de Sistemas</a>
+        <a href="/Curso Técnico/modelagem.html">Modelagem de Sistemas</a>
+        <a href="/Curso Técnico/bancoDados.html">Banco de Dados</a>
     </div>
     </div>
 
