--- a/Ensino Médio/linguagens.html
+++ b/Ensino Médio/linguagens.html
@@ -131,40 +131,20 @@
             </div>
         </div>
 
-        <div class="atividade">
+        <div class="atividade" id="TOEIC">
             <div class="imgAtv" id="redacoes">
-                <img src="/Imagens/redacao2.png">
-                <img src="/Imagens/redacao3.png">
+                <img src="../Imagens/Certificado-TOEIC.jpg" onclick="CertificadoToeic(this)">
             </div>
 
             <div class="textoEbotao">
-                <h1>Segunda e Terceira Redação</h1>
-                <p>Notas da segunda e da terceira aplicação da redação online do ano. Nas duas aplicações, considero que
-                    obtive um bom resultado, mas percebo que há o que melhorar.</p>
-                <p class="habilidades">Habilidade: H4, H14 e H17</p>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="trimestre3" id="trimestre3" style="display: none;">
-        <div class="atividade">
-            <div class="imgAtv">
-                <img src="/Imagens/redacao4.png">
-            </div>
-
-            <div class="textoEbotao">
-                <h1>Melhor Redação do Terceiro Trimestre</h1>
-                <p>Minha maior nota em readções no terceiro trimestre, que foi sobre o tema "Desafios para combater o
-                    racismo ambiental no Brasil". Nela, obtive um bom resultado nas Competências 1, 2 e 3, mas deixei a
-                    desejar nas Competência 4 e 5.</p>
-                <p class="habilidades">Habilidade: H6 e H8</p>
+                <h1>Certificado TOEIC</h1>
+                <p>Certifcado TOEIC que recebi após realizar a prova objetiva, nela obtive 425 na parte de listening e 365 na parte reading.</p>
             </div>
         </div>
 
         <div class="atividade">
             <div class="imgAtv">
-            <iframe src="https://youtube.com/shorts/MGZUoUkaqPE?si=jCI_3HAdn9sRPSzP"></iframe>
+                <iframe src="https://youtube.com/shorts/MGZUoUkaqPE?si=jCI_3HAdn9sRPSzP"></iframe>
 
             </div>
 
@@ -176,22 +156,59 @@
                 <p class="habilidades">Habilidade: H4 e H16</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="VideoSalim()">
             </div>
+
         </div>
-    </div>
 
-    <!-- Modais -->
-    <div class="modalEM">
-        <a href="/Ensino Médio/matematica.html">Matemática</a>
-        <a href="/Ensino Médio/linguagens.html">Linguagens</a>
-        <a href="/Ensino Médio/natureza.html">Natureza</a>
-        <a href="/Ensino Médio/humanas.html">Humanas</a>
-    </div>
+        <div class="trimestre3" id="trimestre3" style="display: none;">
+            <div class="atividade">
+                <div class="imgAtv">
+                    <img src="/Imagens/redacao4.png">
+                </div>
 
-    <div class="modalTec">
-        <a href="/Curso Técnico/desenvolvimento.html">Desenvolvimento de Sistemas</a>
-        <a href="/Curso Técnico/modelagem.html">Modelagem de Sistemas</a>
-        <a href="/Curso Técnico/bancoDados.html">Banco de Dados</a>
-    </div>
+                <div class="textoEbotao">
+                    <h1>Melhor Redação do Terceiro Trimestre</h1>
+                    <p>Minha maior nota em readções no terceiro trimestre, que foi sobre o tema "Desafios para combater
+                        o
+                        racismo ambiental no Brasil". Nela, obtive um bom resultado nas Competências 1, 2 e 3, mas
+                        deixei a
+                        desejar nas Competência 4 e 5.</p>
+                    <p class="habilidades">Habilidade: H6 e H8</p>
+                </div>
+            </div>
+
+            <div class="atividade">
+                <div class="imgAtv">
+                    <iframe src="https://youtube.com/shorts/MGZUoUkaqPE?si=jCI_3HAdn9sRPSzP"></iframe>
+
+                </div>
+
+                <div class="textoEbotao">
+                    <h1>Reel Salim Miguel</h1>
+                    <p>Vídeo curto modelo instagram (reel) sobre alguma construção de Florianópolis que apareça no livro
+                        Primeiro de Abril: Narrativas de cadeia do escritor Salim Miguel. Eu e minha dupla fizemos sobre
+                        a
+                        ponte Hercílio Luz e como os militares usavam ela para gerar medo nos presos.</p>
+                    <p class="habilidades">Habilidade: H4 e H16</p>
+                    <img src="/Imagens/Botão Olho Portfólio.png" onclick="VideoSalim()">
+                </div>
+            </div>
+        </div>
+
+        <!-- Modais -->
+        <div class="modalEM">
+            <a href="/Ensino Médio/matematica.html">Matemática</a>
+            <a href="/Ensino Médio/linguagens.html">Linguagens</a>
+            <a href="/Ensino Médio/natureza.html">Natureza</a>
+            <a href="/Ensino Médio/humanas.html">Humanas</a>
+        </div>
+
+        <div class="modalTec">
+            <a href="/Curso Técnico/desenvolvimento.html">Desenvolvimento de Sistemas</a>
+            <a href="/Curso Técnico/modelagem.html">Modelagem de Sistemas</a>
+            <a href="/Curso Técnico/bancoDados.html">Banco de Dados</a>
+        </div>
+
+
 </body>
 
 </html>
