Subindo nova versão com nova atividade na aba 'Desenvolvimento de Sistemas' e correções ortográficas em algum textos

--- a/Curso Técnico/bancoDados.html
+++ b/Curso Técnico/bancoDados.html
@@ -25,7 +25,7 @@
 
         <div class="textoEbotao">
             <h1>Bolo de Caneca</h1>
-            <p>Uma lista com três exercícios sobre modelagem conceitual de banco de dados. Cada um deles, em seu enucniado, me dava um contexto de uma situação e, a partir disso, eu precisava criar um modelo de banco de dados, na plataforma BrModelo, que resolvesse essa situação.</p>
+            <p>Uma lista com três exercícios sobre modelagem conceitual de banco de dados. Cada um deles, em seu enucniado, me dava um contexto de uma situação e, a partir disso, eu precisava criar um modelo de banco de dados na plataforma BrModelo que resolvesse essa situação.</p>
             <p class="habilidades">Habilidade: H1, H2, H3 e H4.</p>
             <img src="/Imagens/Botão Olho Portfólio.png" onclick="ModeloLogico()">
         </div>
