--- a/Curso Técnico/desenvolvimento.html
+++ b/Curso Técnico/desenvolvimento.html
@@ -25,12 +25,23 @@
 
         <div class="textoEbotao">
             <h1>Sistema CRUD Funcional</h1>
-            <p>Um sistema de CRUD funcional que lista os usuários cadastrados em uma tabela. O sistema foi feito com node.js e o banco de dados no PgAdmin 4.</p>
+            <p>Sistema CRUD funcional onde é possível cadastrar usuários no lado esquerdo da tela e visualizar as informações desses usuários em uma tebale no lado direito. O sistema foi desenvolvido com node.js e o banco de dados feito no PgAdmin4.</p>
             <p class="habilidades">Habilidade: H1, H2, H3 e H4.</p>
             <img src="/Imagens/Botão Olho Portfólio.png" onclick="CrudFuncional()">
         </div>
     </div>
 
+        <div class="atividade" id="Tempfy">
+        <div class="imgAtv">
+            <img src="/Imagens/Principal-Tempfy.png">
+        </div>
+
+        <div class="textoEbotao">
+            <h1>Site Tempfy</h1>
+            <p>Site para a Situação de Aprendizagem(S.A.). Nele, o usuário pode cadastrar uma conta ou logar em uma conta já existente e comprar os produtos que a empresa Tempfy oferece. O sistema que conecta o frontend com o backend foi feito com node.js e o banco de dados em PgAdmin4.</p>
+            <img src="/Imagens/Botão Olho Portfólio.png" onclick="SiteTempfy()">
+        </div>
+    </div>
 
     <!-- Modais -->
     <div class="modalEM">
