--- a/Curso Técnico/modelagem.html
+++ b/Curso Técnico/modelagem.html
@@ -29,7 +29,7 @@
 
             <div class="textoEbotao">
                 <h1>Tabela de Requisitos e Regras de Negócios</h1>
-                <p>Nessa atividade eu montei uma planilha contendo os requisitos funcionais e não funcionais de um aplicativo de uma hamburgueria e, também, as suas regras de negócios. Essa atividade me ajudou a compreender as diferenças entre requisitos funcionais, não funcionais e regras de negócios e a importância de defini-los previamente.</p>
+                <p>Nessa atividade eu montei uma planilha contendo os requisitos funcionais e não funcionais de um aplicativo de uma hamburgueria e as suas regras de negócios. Essa atividade me ajudou a compreender as diferenças entre requisitos funcionais, não funcionais e regras de negócios e a importância de defini-los previamente.</p>
                 <p class="habilidades">Habilidade: H1, H2, H3, H4, H6, H7.</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="TabelaRequisitos()">
             </div>
