--- a/Ensino Médio/linguagens.html
+++ b/Ensino Médio/linguagens.html
@@ -93,8 +93,7 @@
 
             <div class="textoEbotao">
                 <h1>Biografia Profissional</h1>
-                <p>Nessa atividade eu escrevi minha própria biografia profissional, nela eu conto onde nasci, quando e
-                    por que entrei na Escola Sesi e qual carreira pretendo seguir no futuro.</p>
+                <p>Nessa atividade eu escrevi minha própria biografia profissional, nela eu conto onde nasci, quando e por que entrei na Escola Sesi e qual carreira pretendo seguir no futuro.</p>
                 <p class="habilidades">Habilidade: H22</p>
             </div>
         </div>
@@ -109,9 +108,8 @@
 
             <div class="textoEbotao">
                 <h1>"Que Tipo de Arte Você Consome"</h1>
-                <p>A atividade proposta era escolher o meu artista, filme e música favorita e escrever textos explicando
-                    como foi meu primeiro contato com eles, e o porquê de serem meu favoritos em inglês, utilizando o
-                    simple past.</p>
+                <p>A atividade proposta era escolher o meu artista, filme e música favorita e escrever textos em inglês (utilizando o simple past) explicando 
+                como foi meu primeiro contato com eles, e o porquê de serem meus favoritos. </p>
                 <p class="habilidades">Habilidade: H11 e H25 </p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="ArteConsome()">
             </div>
