--- a/Ensino Médio/matematica.html
+++ b/Ensino Médio/matematica.html
@@ -33,8 +33,8 @@
             <div class="textoEbotao">
                 <h1>Questionário Quebrando a Banca</h1>
                 <p>Questionário com algumas perguntas sobre o filme "Quebrando a banca" respondido após o filme ter sido
-                    passado em aula. Além disso, elaborei um roteiro de um filme cuja temática central fosse algum
-                    conceito matemático, nele um professor de matemática, ao ir ao cabeleireiro, descobre que seu
+                    passado em aula, além disso, elaborei um roteiro de um filme cuja temática central fosse algum
+                    conceito matemático. Nele, um professor de matemática, ao ir ao cabeleireiro, descobre que seu
                     redemoinho segue perfeitamente a espiral de Fibonacci. A partir disso, ele começa a pesquisar e
                     analisar seus arredores, percebendo que muitas coisas também seguem esse padrão, incluindo as
                     galáxias. No fim da trama, o personagem principal transcende os conhecimentos mundanos ao descobrir
