--- a/Ensino Médio/natureza.html
+++ b/Ensino Médio/natureza.html
@@ -45,7 +45,7 @@
 
             <div class="textoEbotao">
                 <h1>Mapa Mental Eletrostática</h1>
-                <p>Nessa atividade eu precisei criar um mapa mental sobre eletrostática, nele está explicado como calcular a intensidade de uma corrente elétrica, a força elétrica entre corpos, a força de um campo elétrico, o que são cargas elétricas as diferentes formas de eletrizar um corpo.</p>
+                <p>Nessa atividade eu precisei criar um mapa mental sobre eletrostática, nele está explicado como calcular a intensidade de uma corrente elétrica, a força elétrica entre corpos, a força de um campo elétrico, o que são cargas elétricas e as diferentes formas de eletrizar um corpo.</p>
                 <p class="habilidades">Habilidade: H29, H30 e H31</p>
             </div>
         </div>
@@ -84,7 +84,7 @@
 
             <div class="textoEbotao">
                 <h1>Mapa Mental Vacinas e Sistema Imunológico</h1>
-                <p>Após algumas aulas expositivas sobre como as vacinas e o sistema imunológico do nosso corpo funcionam, criei esse mapa mental, utilizando o Canva, com os principais pontos desses dois assuntos.</p>
+                <p>Após algumas aulas expositivas sobre como as vacinas e o sistema imunológico do nosso corpo funcionam, criei um mapa mental sobre os principais pontos desses dois assuntos.</p>
                 <p class="habilidades">Habilidade: H23</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="Vacinas()">
             </div>
@@ -110,7 +110,7 @@
 
             <div class="textoEbotao">
                 <h1>Site Explicativo Sobre o Campo Magnético Terrestre</h1>
-                <p>Site explicativo sobre o campo eletrmoagnético terrestre e as auroras polares (autrais e boreais). Nele é explicado o que é o campo magnético terrestre, como ele funciona, como ele é formado, sua importância para a vida na Terra, uma linha do tempo com os principais estudos sobre ele ao longa da história e como ele é responsável por forma asu auroras polares.</p>
+                <p>Site explicativo sobre o campo eletrmoagnético terrestre e as auroras polares (autrais e boreais). Nele é explicado o que é o campo magnético terrestre, como ele funciona, como ele é formado, sua importância para a vida na Terra, uma linha do tempo com os principais estudos sobre ele ao longa da história e como ele é responsável por formar as auroras polares.</p>
                 <p class="habilidades">Habilidade: H4, H14 e H17</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="CampoEletro()">
             </div>
@@ -126,7 +126,7 @@
 
             <div class="textoEbotao">
                 <h1>Energia: Passado, Presente e Futuro</h1>
-                <p>Após algumas aulas estudando sobre como o ser humano manipula a energia elétrica e seus impactos em nossas vidas, o professor propôs uma atividade para imaginarmos como um aparelho que usamos no dia a dia evoluiria no decorrer dos anos. Eu e meu grupo escolhemos a air fryer para esse trabalho</p>
+                <p>Após algumas aulas estudando sobre como o ser humano manipula a energia elétrica e seus impactos em nossas vidas, o professor propôs uma atividade para imaginarmos como um aparelho que usamos no dia a dia evoluiria no decorrer dos anos. Eu e meu grupo escolhemos a air fryer como objeto para esse exercício de imaginação.</p>
                 <p class="habilidades">Habilidade: H1, H2, H5 e H9</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="Energia()">
 
@@ -140,7 +140,7 @@
 
             <div class="textoEbotao">
                 <h1>Mini Documentário Sobre Separação Por Arraste a Vapor</h1>
-                <p>Ao longo de algumas aulas, estudei sobre os óleos essênciais de plantas, os benefícios que eels podem trazer para a saúde e formas de extraí-los. Após isso, eu e meu grupo elaboramos um mini documentário sobre a separação por arraste a vapor, que é o principal método uasado para estrair óleos de plantas.</p>
+                <p>Ao longo de algumas aulas, estudei sobre os óleos essênciais de plantas, os benefícios que eles podem trazer para a saúde e formas de extraí-los. Após isso, eu e meu grupo elaboramos um mini documentário sobre a separação por arraste a vapor, que é o principal método usado para estrair óleos de plantas.</p>
                 <p class="habilidades">Habilidade: H24, H25, H26, H27 e H28</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="DocArraste()">
             </div>
@@ -153,7 +153,7 @@
 
             <div class="textoEbotao">
                 <h1>Métodos de Separação e Análise</h1>
-                <p>Ao longo de algumas aulas, estudei sobre os óleos essênciais de plantas, os benefícios que eels podem trazer para a saúde e formas de extraí-los. Após isso, eu e meu grupo elaboramos um mini documentário sobre a separação por arraste a vapor, que é o principal método uasado para estrair óleos de plantas.</p>
+                <p>Após algumas aulas expositivas sobre métodos de separação e análise diversos e como eles aparecem em nosso dia a dia, elaborei um mapa mental digita que explica o que é o método de análise espectrofotométrico, como ele funciona e para quê serve.</p>
                 <p class="habilidades">Habilidade: H24, H25, H26, H27 e H28</p>
                 <img src="/Imagens/Botão Olho Portfólio.png" onclick="AnaliseEspec()">
             </div>
